<resources>
    <string name="app_name">Nutrijoy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="titleFirstFragment">Premier Fragment</string>
    <string name="titleMain">Activité principale</string>
    <string name="boutonSwitch">Placer le premier fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="forgetpassword">Mot de passe oublié?</string>
    <string name="createaccount">Créer un compte</string>
    <string name="connexion">Se connecter</string>
    <string name="nutrijoytitle">NUTRIJOY</string>
    <string name="back">Back</string>
    <string name="mail">Adresse e-mail</string>
    <string name="password">Mot de passe</string>
    <string name="username">Username</string>
    <string name="confirmpassword">Confirmez le mot de passe</string>

    <string name="retour">Retour</string>
    <string name="envoiReset">Recevoir un lien de réinitialisation</string>

    <string name="confirmUsername">Confirmer le changement de pseudo.</string>
    <string name="newPseudo">Nouveau pseudo</string>

    <string name="lorem_ipsum">oui</string>
</resources>